...
            Column(
                modifier = Modifier.fillMaxWidth(),
                verticalArrangement = Arrangement.spacedBy(10.dp)
            ) {
                if (onRetry != null) {
                    NeoButton(
                        text = "重试",
                        onClick = onRetry
                    )
                }
                if (hasLogActions) {
                    NeoButtonSecondary(
                        text = "复制错误日志",
                        onClick = copyLogAction,
                        containerColor = White
                    )
                    NeoButtonSecondary(
                        text = "发送错误报告",
                        onClick = sendLogAction,
                        containerColor = Cream
                    )
                }
            }
        }
...
